exams/2026-02-09/iptables
# first and last name: mattia fogli
# student id: 123456

-F
-t nat -F

-P INPUT DROP
-P FORWARD DROP

-A INPUT -i eth1 -p icmp -j ACCEPT

-A INPUT -i eth1 -p tcp --dport 22 -j ACCEPT

-A FORWARD -i eth0 -p tcp --dport 80 -j ACCEPT
-A FORWARD -i eth0 -p tcp --dport 443 -j ACCEPT
-A FORWARD -i eth1 -p tcp --dport 80 -j ACCEPT
-A FORWARD -i eth1 -p tcp --dport 443 -j ACCEPT

-A FORWARD -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

-t nat -A POSTROUTING -o eth0 -j MASQUERADE

-t nat -A PREROUTING -i eth0 -p tcp --dport 80 -j DNAT --to-destination 10.20.30.100:8080
-A FORWARD -i eth0 -o eth1 -p tcp -d 10.20.30.100 --dport 8080 -j ACCEPT

-t nat -A PREROUTING -i eth0 -p tcp --dport 443 -j DNAT --to-destination 10.20.30.100:8443
-A FORWARD -i eth0 -o eth1 -p tcp -d 10.20.30.100 --dport 8443 -j ACCEPT
